--- a/django_movie/movies/templates/movies/movie_detail.html
+++ b/django_movie/movies/templates/movies/movie_detail.html
@@ -34,13 +34,17 @@
                                 <li style="list-style: none">
                                     <span><b>Режиссер:</b>
                                         {% for director in movie.directors.all %}
+                                        <a href="{% url 'actor_detail' director.name %}">
                                             {{ director.name }}
+                                        </a>
                                         {% endfor %}
                                     </span>
                                 </li>
                                 <li style="list-style: none"><span><b>Актеры:</b>
                                     {% for actor in movie.actors.all %}
-                                        {{ actor.name }}
+                                        <a href="{% url 'actor_detail' actor.name %}">
+                                            {{ actor.name }}
+                                        </a>
                                     {% endfor %}
                                 </span>
                                 </li>
