--- a/django_movie/movies/templates/movies/tags/last_movies.html
+++ b/django_movie/movies/templates/movies/tags/last_movies.html
@@ -6,8 +6,9 @@
             <img src="{{ movie.poster.url }}" class="img-fluid" alt="">
         </div>
         <div class="img-deal1 col-md-4">
-            <h3 class="editContent">{{ movie.title }}</h3>
-            <a href="{% url 'movie_detail' movie.url %}" class="editContent" ></a>
+            <a href="{% url 'movie_detail' movie.url %}" class="editContent" >
+                <h3 class="editContent">{{ movie.title }}</h3>
+            </a>
         </div>
     </div>
     {% endfor %}
