--- a/django_movie/movies/templates/movies/movie_detail.html
+++ b/django_movie/movies/templates/movies/movie_detail.html
@@ -63,20 +63,19 @@
                                 <li style="list-style: none"><span><b>Сборы в мире:</b> ${{ movie.fees_in_world }}</span>
                                 </li>
                                 <li style="list-style: none">
-                                    <a href="#"><b>Рейтинг:</b>
-                                        <span class="fa fa-star" aria-hidden="true"
-                                              style="outline: none; cursor: inherit;"></span>
-                                        <span class="fa fa-star" aria-hidden="true"
-                                              style="outline: none; cursor: inherit;"></span>
-                                        <span class="fa fa-star" aria-hidden="true"
-                                              style="outline: none; cursor: inherit;"></span>
-                                        <span class="fa fa-star" aria-hidden="true"
-                                              style="outline: none; cursor: inherit;"></span>
-                                        <span class="fa fa-star" aria-hidden="true"
-                                              style="outline: none; cursor: inherit;"></span>
-                                        <span class="editContent"
-                                              style="outline: none; cursor: inherit;">5.0</span>
-                                    </a>
+                                    <form action="{% url 'add_rating' %}" method="post" name="rating">
+                                        <b>Рейтинг:</b>
+                                        {% csrf_token %}
+                                        <input type="hidden" value="{{ movie.id }}" name="movie">
+                                        <span class="rating">
+                                            {% for k, v in star_form.fields.star.choices %}
+                                                <input id="rating{{ v }}" type="radio" name="star"
+                                                       value="{{ k }}">
+                                                <label for="rating{{ v }}">{{ k }}</label>
+                                            {% endfor %}
+                                        </span>
+                                        <span class="editContent">4.0</span>
+                                    </form>
                                 </li>
                                 <div class="share-desc">
                                     <div class="share">
